# credit-risk-scoring-api

./: .env.example  README.md  docker-compose.yml  pyproject.toml
configs/: project.json
data/: README.md
demo/: index.html  styles.css
docs/: architecture.md  runbook.md
src/app/web/: index.html
